[package]
name = "genbib"
version = "0.1.0"
authors = ["Hilmar Gústafsson <hilmargustafs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
async-std = "1.6.5"
scraper = "0.12.0"
surf = "2.0.0"
uuid = { version = "0.8.1", features = ["v4"] }
